Fix class container

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -86,14 +86,16 @@
                                 </a>
                             </li>
                         </ul>
+                        </div>       
                     </div>
-                </div>                    
+                                     
             </div>
         </div>
         <!--banner section end-->
         <!--product section start-->
-        <section class="container">
-            <div class="product">
+        <section class="product__container">
+            <div class="container">
+                <div class="product">
                 <div class="timeline">
                     <img src="./assets/image/timeline.webp" alt="timeline">
                 </div>
@@ -119,11 +121,13 @@
                     </div>
                 </div>
             </div>
+            </div> 
         </section>
-        <!--product section end-->
+        <!--product section end-->  
         <!--functions section start-->
-        <section class="container ">
-            <div class="functions">
+        <section class="functions__container">
+            <div class="container">
+                <div class="functions">
                 <h2 class="functions__headline">Make your work easier</h2>
                 <div class="feature">
                     <div class="feature__descripstion">
@@ -171,11 +175,14 @@
                 </div>
                 <button class="btn-view">View more benefits</button>
             </div>
+            </div>
+            
         </section>
         <!--funtions section end-->
         <!--charts section start-->
-        <section class="container">
-            <div class="charts">
+        <section class="charts__container">
+            <div class="container">
+                            <div class="charts">
                 <div class="chart__content">
                     <h2> We work how you work everyday</h2>
                     <p>Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
@@ -184,6 +191,7 @@
                 <div class="chart-image">
                     <img src="assets/image/charts.webp" alt="Charts">
                 </div>
+            </div>
             </div>
         </section>
         <!--charts section end-->
