--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -90,6 +90,7 @@
                     </div>
                                      
             </div>
+            </div>
         </div>
         <!--banner section end-->
         <!--product section start-->
