Fix the chart img

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -31,7 +31,7 @@
                         <button class="header-button">Get started free</button>
                     </div>
                     <div class="menu">
-                        <button class="menu-icon"><img src="./assets/image/icon/menu.svg" alt="Menu"><p>MENU</p></button>
+                        <button class="menu-icon"><img src="./assets/image/icon/menu.svg" alt="Menu"></button><p>MENU</p>
                     </div>
                 </header>
             </div>
